Fixed Excel exporting and slight UI changes + Able to change vehicle's grouping

--- a/public/app/admin/users.html
+++ b/public/app/admin/users.html
@@ -1,5 +1,46 @@
-<div style="padding: 1em 2em 0em 2em">
-	 <div class="row ">
+<div style="padding: 1em 2em 0em 2em; text-align:center">
+        <div class="preloader-wrapper medium active" ng-if="!vm.users.length">
+        <div class="spinner-layer spinner-blue">
+            <div class="circle-clipper left">
+            <div class="circle"></div>
+            </div><div class="gap-patch">
+            <div class="circle"></div>
+            </div><div class="circle-clipper right">
+            <div class="circle"></div>
+            </div>
+        </div>
+
+        <div class="spinner-layer spinner-red">
+            <div class="circle-clipper left">
+            <div class="circle"></div>
+            </div><div class="gap-patch">
+            <div class="circle"></div>
+            </div><div class="circle-clipper right">
+            <div class="circle"></div>
+            </div>
+        </div>
+
+        <div class="spinner-layer spinner-yellow">
+            <div class="circle-clipper left">
+            <div class="circle"></div>
+            </div><div class="gap-patch">
+            <div class="circle"></div>
+            </div><div class="circle-clipper right">
+            <div class="circle"></div>
+            </div>
+        </div>
+
+        <div class="spinner-layer spinner-green">
+            <div class="circle-clipper left">
+            <div class="circle"></div>
+            </div><div class="gap-patch">
+            <div class="circle"></div>
+            </div><div class="circle-clipper right">
+            <div class="circle"></div>
+            </div>
+        </div>
+    </div>
+	 <div class="row " ng-if="vm.users.length">
         <div class="col s12">
             <div class="card">
                 <div class="title">
