--- a/public/app/report/driving_records.html
+++ b/public/app/report/driving_records.html
@@ -51,14 +51,14 @@
             <table ng-if="vm.driving_records_full.data.length">
                 <thead class="tablehead">
                 <tr>
-                    <td>Date</td>
-                    <td>Time</td>
-                    <td>Fuel(L)</td>
-                    <td>Temperature(℃)</td>
-                    <td>Speed</td>
-                    <td>ACC</td>
-                    <td>Mileage(Km)</td>
-                    <td>Address</td>
+                    <td  bgcolor='#51BAF7'>Date</td>
+                    <td bgcolor='#51BAF7'>Time</td>
+                    <td bgcolor='#51BAF7'>Fuel(L)</td>
+                    <td bgcolor='#51BAF7'>Temperature(℃)</td>
+                    <td bgcolor='#51BAF7'>Speed</td>
+                    <td bgcolor='#51BAF7'>ACC</td>
+                    <td bgcolor='#51BAF7'>Mileage(Km)</td>
+                    <td bgcolor='#51BAF7'>Address</td>
                 </tr>
                 </thead>
                 <tbody>
