--- a/public/app/report/home.html
+++ b/public/app/report/home.html
@@ -16,7 +16,7 @@
         <li><a class="dropdown-button"  data-activates="temperature">Temperature</a></li>
         <li><a ui-sref=".rf_data">RF Data</a></li>-->
         <li><a ui-sref=".idle">Idle</a></li>
-        <li><a ui-sref=".variation">Variation</a></li>
+        <li><a ui-sref=".variation">Variation Refuel</a></li>
         <li><a ui-sref=".all_vehicle_summary">All Vehicle Summary</a></li>
         <li><a ui-sref=".history_playback">History Playback</a></li>
         <!--<li><a ui-sref=".fuel_management">Fuel Management</a></li>-->
