--- a/public/index.html
+++ b/public/index.html
@@ -67,6 +67,7 @@
         <script src="https://www.amcharts.com/lib/3/amcharts.js"></script>
         <script src="https://www.amcharts.com/lib/3/serial.js"></script>
         <script src="https://www.amcharts.com/lib/3/themes/light.js"></script>
+        <script src="/assets/js/jspdf.min.js"></script>
 
     	<script src="app/app.module.js"></script>
         <script src="app/app.config.js"></script>
