--- a/public/app/report/idle.html
+++ b/public/app/report/idle.html
@@ -2,7 +2,20 @@
 <div class="row">
     <div class="col s12 m12 l12" ng-if="vm.loaded">
         <div class="col s12 m12 l3">
-            <p>Vehicle Number Plate: <input type="text" id="platenumber" ng-model="vm.plate_number"></p>
+            <div class="col s12 m12 l12">
+                <span>Vehicle Group: </span>
+                <select class="browser-default" ng-model="vm.group_selected" ng-options="group.group for group in vm.group" ng-change="vm.group_update()">
+                </select>
+            </div>
+            <div class="col l12">
+                <span>Plate NO: </span>
+                <div class="col s12 m12 l12">
+                    <input  class='dropdown-button' data-beloworigin="true" href='#' data-activates='dropdown1' ng-model="vm.plate_number.carNO">
+                </div>
+                <ul id='dropdown1' class='dropdown-content'>
+                    <li ng-repeat="car in vm.car_id | filter:vm.plate_number"  ng-click="vm.plate_number_select(car)"><a>{{car.carNO}}</a></li>
+                </ul>
+            </div>
         </div>
 
         <div class="col s12 m12 l4">
@@ -36,34 +49,32 @@
     </div>
     <div ng-if="vm.idle.carNO">
         <div class="col s12 m12 l12">
-            <!--<p class="col s12 m12 l5">Statistical Time: <b>01-03-2016 00:00:00</b></p>
-            <p class="col s12 m12 l4">Tabulation Time: <b>01-03-2016 Current Time</b></p>-->
-            <div class="col s12 m12 l6">
-                <div class="col s12 m12 l12">
-                    <p class="col s12 m12 l3">Vehicle Name:</p>
-                    <p class="col s12 m12 l4" ng-if="!vm.idle.carBrand && !vm.idle.carNO"><b>N/A</b></p>
-                    <p class="col s12 m12 l4" ng-if="!vm.idle.carBrand && vm.idle.carNO"><b>Brand N/A - {{vm.idle.carNO}}</b></p>
-                    <p class="col s12 m12 l4" ng-if="vm.idle.carBrand && vm.idle.carNO"><b>{{vm.idle.carBrand}} - {{vm.idle.carNO}}</b></p>
+            <div id="exportable" ng-if="vm.idle[0]">            
+                <div class="col s12 m12 l6">
+                    <div class="col s12 m12 l12">
+                        <p class="col s12 m12 l3">Vehicle Name:</p>
+                        <p class="col s12 m12 l4" ng-if="!vm.idle.carBrand && !vm.idle.carNO"><b>N/A</b></p>
+                        <p class="col s12 m12 l4" ng-if="!vm.idle.carBrand && vm.idle.carNO"><b>Brand N/A - {{vm.idle.carNO}}</b></p>
+                        <p class="col s12 m12 l4" ng-if="vm.idle.carBrand && vm.idle.carNO"><b>{{vm.idle.carBrand}} - {{vm.idle.carNO}}</b></p>
+                    </div>
+                    <div class="col s12 m12 l12">
+                        <p class="col s12 m12 l3">Driver Name:</p>
+                        <p class="col s12 m12 l4" ng-if="!vm.idle.driver"><b>N/A</b></p>
+                        <p class="col s12 m12 l4" ng-if="vm.idle.driver"><b>{{vm.idle.driver}}</b></p>
+                    </div>
                 </div>
-                <div class="col s12 m12 l12">
-                    <p class="col s12 m12 l3">Driver Name:</p>
-                    <p class="col s12 m12 l4" ng-if="!vm.idle.driver"><b>N/A</b></p>
-                    <p class="col s12 m12 l4" ng-if="vm.idle.driver"><b>{{vm.idle.driver}}</b></p>
+                <div class="col s12 m12 l6">
+                    <div class="col s12 m12 l12">
+                        <p class="col s12 m12 l3">Driver Contact 1:</p>
+                        <p class="col s12 m12 l4" ng-if="!vm.idle.driverTel"><b>N/A</b></p>
+                        <p class="col s12 m12 l4" ng-if="vm.idle.driverTel"><b>{{vm.idle.driverTel}}</b></p>
+                    </div>
+                    <div class="col s12 m12 l12">
+                        <p class="col s12 m12 l3">Driver Contact 2:</p>
+                        <p class="col s12 m12 l4" ng-if="!vm.idle.driver2Tel"><b>N/A</b></p>
+                        <p class="col s12 m12 l4" ng-if="vm.idle.driver2Tel"><b>{{vm.idle.driver2Tel}}</b></p>
+                    </div>
                 </div>
-            </div>
-            <div class="col s12 m12 l6">
-                <div class="col s12 m12 l12">
-                    <p class="col s12 m12 l3">Driver Contact 1:</p>
-                    <p class="col s12 m12 l4" ng-if="!vm.idle.driverTel"><b>N/A</b></p>
-                    <p class="col s12 m12 l4" ng-if="vm.idle.driverTel"><b>{{vm.idle.driverTel}}</b></p>
-                </div>
-                <div class="col s12 m12 l12">
-                    <p class="col s12 m12 l3">Driver Contact 2:</p>
-                    <p class="col s12 m12 l4" ng-if="!vm.idle.driver2Tel"><b>N/A</b></p>
-                    <p class="col s12 m12 l4" ng-if="vm.idle.driver2Tel"><b>{{vm.idle.driver2Tel}}</b></p>
-                </div>
-            </div>
-            <div id="exportable" ng-if="vm.idle[0]">
                 <table>
                     <thead class="tablehead">
                     <tr>
@@ -89,7 +100,7 @@
             </div>
         </div>
     </div>
-    <p ng-if="!vm.idle[0] && vm.idle.carNO">No Records</p>
+    <p ng-if="!vm.idle[0] && vm.idle.carNO"  style="text-align: center; font-weight:bold">No Records</p>
     <div class="divider"></div>
     <div class="row"  ng-if="vm.idle.carNO.length">
         <dir-pagination-controls class="pagination" style="margin: 0 auto;    text-align: center;"
