--- a/public/app/report/variation.html
+++ b/public/app/report/variation.html
@@ -2,7 +2,20 @@
 <div class="row" ng-if="vm.loaded">
     <div class="col s12 m12 l12">
         <div class="col s12 m12 l3">
-            <p>Vehicle Number Plate: <input type="text" id="platenumber" ng-model="vm.plate_number"></p>
+            <div class="col s12 m12 l12">
+                <span>Vehicle Group: </span>
+                <select class="browser-default" ng-model="vm.group_selected" ng-options="group.group for group in vm.group" ng-change="vm.group_update()">
+                </select>
+            </div>
+            <div class="col l12">
+                <span>Plate NO: </span>
+                <div class="col s12 m12 l12">
+                    <input  class='dropdown-button' data-beloworigin="true" href='#' data-activates='dropdown1' ng-model="vm.plate_number.carNO">
+                </div>
+                <ul id='dropdown1' class='dropdown-content'>
+                    <li ng-repeat="car in vm.car_id | filter:vm.plate_number"  ng-click="vm.plate_number_select(car)"><a>{{car.carNO}}</a></li>
+                </ul>
+            </div>
         </div>
 
         <div class="col s12 m12 l4">
@@ -52,7 +65,7 @@
             </table>
         </div>
     </div>
-    <p ng-if="!vm.variation_full.data.length && vm.variation_full.plate_number">No Records</p>
+    <p ng-if="!vm.variation_full.data.length && vm.variation_full.plate_number" style="text-align: center; font-weight:bold">No Records</p>
 </div>
     <div class="divider"></div>
     <div class="row" style="text-align:center; padding-top:10em;">
