--- a/public/app/dashboard/home.html
+++ b/public/app/dashboard/home.html
@@ -2,8 +2,8 @@
     <nav style=' height: 44px; line-height: 44px; background: #D5989A;;' class="adjust-sidenav">
         <div class="nav-wrapper">
             <ul class="" style="width:100%">
-                <li class="menu" style="width:50%"><a ui-sref=".list" style="text-align:center;"><b>Vehicle List</b></a></li>
-                <li class="menu" style="width:50%"><a ui-sref=".map" style="text-align:center;"><b>Vehicle Map</b></a></li>
+                <li class="menu" style="width:50%"><a ui-sref=".list" style="text-align:center; width:100%;"><b>Vehicle List</b></a></li>
+                <li class="menu" style="width:50%"><a ui-sref=".map" style="text-align:center; width:100%;"><b>Vehicle Map</b></a></li>
             </ul>
         </div>
     </nav>
