--- a/public/app/dashboard/map.html
+++ b/public/app/dashboard/map.html
@@ -98,7 +98,7 @@
                     </div>
                 </div>
 
-                <div class="row"   ng-if="vm.car_details_full">
+                <!--<div class="row"   ng-if="vm.car_details_full">
                     <h5>Tyre Details</h5>
                     <div class="col l4">
                         <div class="row center" style="position:relative;">
@@ -154,7 +154,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div>-->
             </div>
             <div class="col s12 m12 l8 card" style="margin: 0; padding: 0; height: calc(100vh - 160px);">
                 <div id="map_home"></div>
