--- a/public/app/home/home.html
+++ b/public/app/home/home.html
@@ -1,7 +1,7 @@
 <div class="row" ng-if="user === false || user_check === 3">
     <div class="col s12 m12 l12 center" style="margin-top:2%">
         <b style="font-size:140%">GPS MONITORING SYSTEM - Web Login</b><br/>
-        <img class="responsive-img" style="height:200px" src="/assets/image/logo.jpg">
+        <img class="responsive-img" style="height:200px" src="/assets/image/logo.png">
     </div>
     <div class="card col s12 m12 l4 offset-l4">
         <div class="card-content">
