Display ignition and fuel status

--- a/public/app/dashboard/map.html
+++ b/public/app/dashboard/map.html
@@ -91,6 +91,15 @@
                         </div>
                     </div>
                     <div class="row">
+                        <div class="col s3">SPEED</div>
+                        <div class="col s1">:</div>
+                        <div class="col s8">
+                            <b>
+                                {{vm.car_details_full.data[0].fuel}} 
+                            </b>
+                        </div>
+                    </div>
+                    <div class="row">
                         <div class="col s3">ADDRESS</div>
                         <div class="col s1">:</div>
                         <div class="col s8" ng-if="vm.car_details_full.data[0].address"><b>{{vm.car_details_full.data[0].address}}</b></div>
