--- a/public/app/dashboard/list.html
+++ b/public/app/dashboard/list.html
@@ -32,8 +32,8 @@
                 <td ng-if="car_detail.data[0].fuel">{{car_detail.data[0].fuel}}</td>
                 <td ng-if="!car_detail.data[0].fuel">0</td>
                 <td>{{car_detail.data[0].mileage | number: 3}}km</td>
-                <td ng-if="car_detail.data[0].status">{{car_detail.data[0].status}}</td>
-                <td ng-if="!car_detail.data[0].status">Not Indicated</td>
+                <td ng-if='car_detail.data[0].status.indexOf("ACC off") > -1'>OFF</td>
+                <td ng-if="car_detail.data[0].status.indexOf('ACC off') === -1">ON</td>                
                 <td ng-if="car_detail.data[0].address">{{car_detail.data[0].address}}</td>
                 <td ng-if="!car_detail.data[0].address">No Address</td>
                 <!--<td></td>-->
