--- a/public/app/dashboard/map.html
+++ b/public/app/dashboard/map.html
@@ -91,7 +91,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col s3">SPEED</div>
+                        <div class="col s3">Fuel</div>
                         <div class="col s1">:</div>
                         <div class="col s8">
                             <b>
