--- a/public/app/report/idle.html
+++ b/public/app/report/idle.html
@@ -82,7 +82,7 @@
                         <td bgcolor='#51BAF7'>END DATE TIME</td>
                         <td bgcolor='#51BAF7'>DURATION OF IDLE</td>
                         <td bgcolor='#51BAF7'>IDLING(LITRE)</td>
-                        <td bgcolor='#51BAF7'>POI ADDRESS</td>
+                        <!--<td bgcolor='#51BAF7'>POI ADDRESS</td>-->
                         <td bgcolor='#51BAF7'>LOCATION</td>
                     </tr>
                     </thead>
@@ -91,8 +91,8 @@
                         <td>{{idle.gpsTime  | date:'medium'}}</td>
                         <td>{{idle.end_date | date:'medium'}}</td>
                         <td>{{idle.total_hours | number : 2}} hours</td>
-                        <td>0</td>
-                        <td>{{idle.lo}} , {{idle.la}}</td>
+                        <td>{{idle.idle_litre}}</td>
+                        <!--<td>{{idle.lo}} , {{idle.la}}</td>-->
                         <td>{{idle.address}}</td>
                     </tr>
                     </tbody>
